prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__group_sort.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nfrom tracks\nderive d = album_id + 1\ngroup d (\n    aggregate {\n        n1 = (track_id | sum),\n    }\n)\nsort d\ntake 10\nselect { d1 = d, n1 }\n"
input_file: prqlc/prqlc/tests/integration/queries/group_sort.prql
---
frames:
- - 1:25-48
  - columns:
    - !All
      input_id: 19
      except: []
    - !Single
      name:
      - d
      target_id: 20
      target_name: null
    inputs:
    - id: 19
      name: tracks
      table:
      - default_db
      - tracks
- - 1:63-111
  - columns:
    - !Single
      name:
      - d
      target_id: 26
      target_name: null
    - !Single
      name:
      - n1
      target_id: 43
      target_name: null
    inputs:
    - id: 19
      name: tracks
      table:
      - default_db
      - tracks
- - 1:114-120
  - columns:
    - !Single
      name:
      - d
      target_id: 26
      target_name: null
    - !Single
      name:
      - n1
      target_id: 43
      target_name: null
    inputs:
    - id: 19
      name: tracks
      table:
      - default_db
      - tracks
- - 1:121-128
  - columns:
    - !Single
      name:
      - d
      target_id: 26
      target_name: null
    - !Single
      name:
      - n1
      target_id: 43
      target_name: null
    inputs:
    - id: 19
      name: tracks
      table:
      - default_db
      - tracks
- - 1:129-150
  - columns:
    - !Single
      name:
      - d1
      target_id: 56
      target_name: null
    - !Single
      name:
      - n1
      target_id: 57
      target_name: null
    inputs:
    - id: 19
      name: tracks
      table:
      - default_db
      - tracks
nodes:
- id: 19
  kind: Ident
  span: 1:13-24
  ident: !Ident
  - default_db
  - tracks
  parent: 25
- id: 20
  kind: RqOperator
  span: 1:36-48
  alias: d
  targets:
  - 22
  - 23
  parent: 24
- id: 22
  kind: Ident
  span: 1:36-44
  ident: !Ident
  - this
  - tracks
  - album_id
  targets:
  - 19
- id: 23
  kind: Literal
  span: 1:47-48
- id: 24
  kind: Tuple
  span: 1:36-48
  children:
  - 20
  parent: 25
- id: 25
  kind: 'TransformCall: Derive'
  span: 1:25-48
  children:
  - 19
  - 24
  parent: 47
- id: 26
  kind: Ident
  span: 1:55-56
  ident: !Ident
  - this
  - d
  targets:
  - 20
  parent: 29
- id: 29
  kind: Tuple
  span: 1:55-56
  children:
  - 26
  parent: 47
- id: 43
  kind: RqOperator
  span: 1:100-103
  alias: n1
  targets:
  - 45
  parent: 46
- id: 45
  kind: Ident
  span: 1:89-97
  ident: !Ident
  - this
  - tracks
  - track_id
  targets:
  - 19
- id: 46
  kind: Tuple
  span: 1:73-111
  children:
  - 43
  parent: 47
- id: 47
  kind: 'TransformCall: Aggregate'
  span: 1:63-111
  children:
  - 25
  - 46
  - 29
  parent: 52
- id: 50
  kind: Ident
  span: 1:119-120
  ident: !Ident
  - this
  - d
  targets:
  - 26
  parent: 52
- id: 52
  kind: 'TransformCall: Sort'
  span: 1:114-120
  children:
  - 47
  - 50
  parent: 54
- id: 54
  kind: 'TransformCall: Take'
  span: 1:121-128
  children:
  - 52
  - 55
  parent: 59
- id: 55
  kind: Literal
  parent: 54
- id: 56
  kind: Ident
  span: 1:143-144
  alias: d1
  ident: !Ident
  - this
  - d
  targets:
  - 26
  parent: 58
- id: 57
  kind: Ident
  span: 1:146-148
  ident: !Ident
  - this
  - n1
  targets:
  - 43
  parent: 58
- id: 58
  kind: Tuple
  span: 1:136-150
  children:
  - 56
  - 57
  parent: 59
- id: 59
  kind: 'TransformCall: Select'
  span: 1:129-150
  children:
  - 54
  - 58
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:13-17
              args:
              - Ident:
                - tracks
                span: 1:18-24
            span: 1:13-24
          - FuncCall:
              name:
                Ident:
                - derive
                span: 1:25-31
              args:
              - Binary:
                  left:
                    Ident:
                    - album_id
                    span: 1:36-44
                  op: Add
                  right:
                    Literal:
                      Integer: 1
                    span: 1:47-48
                span: 1:36-48
                alias: d
            span: 1:25-48
          - FuncCall:
              name:
                Ident:
                - group
                span: 1:49-54
              args:
              - Ident:
                - d
                span: 1:55-56
              - FuncCall:
                  name:
                    Ident:
                    - aggregate
                    span: 1:63-72
                  args:
                  - Tuple:
                    - Pipeline:
                        exprs:
                        - Ident:
                          - track_id
                          span: 1:89-97
                        - Ident:
                          - sum
                          span: 1:100-103
                      span: 1:88-104
                      alias: n1
                    span: 1:73-111
                span: 1:63-111
            span: 1:49-113
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:114-118
              args:
              - Ident:
                - d
                span: 1:119-120
            span: 1:114-120
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:121-125
              args:
              - Literal:
                  Integer: 10
                span: 1:126-128
            span: 1:121-128
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:129-135
              args:
              - Tuple:
                - Ident:
                  - d
                  span: 1:143-144
                  alias: d1
                - Ident:
                  - n1
                  span: 1:146-148
                span: 1:136-150
            span: 1:129-150
        span: 1:13-150
    span: 1:0-150
