prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__group_sort_derive_select_join.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "s\"SELECT album_id,title,artist_id FROM albums\"\ngroup {artist_id} (aggregate { album_title_count = count this.`title`})\nsort {this.artist_id, this.album_title_count}\nderive {new_album_count = this.album_title_count}\nselect {this.artist_id, this.new_album_count}\njoin side:left ( s\"SELECT artist_id,name as artist_name FROM artists\" ) (this.artist_id == that.artist_id)\n"
input_file: prqlc/prqlc/tests/integration/queries/group_sort_derive_select_join.prql
---
frames:
- - 1:66-117
  - columns:
    - !Single
      name:
      - _literal_18
      - artist_id
      target_id: 19
      target_name: null
    - !Single
      name:
      - album_title_count
      target_id: 38
      target_name: null
    inputs:
    - id: 18
      name: _literal_18
      table:
      - default_db
      - _literal_18
- - 1:119-164
  - columns:
    - !Single
      name:
      - _literal_18
      - artist_id
      target_id: 19
      target_name: null
    - !Single
      name:
      - album_title_count
      target_id: 38
      target_name: null
    inputs:
    - id: 18
      name: _literal_18
      table:
      - default_db
      - _literal_18
- - 1:165-214
  - columns:
    - !Single
      name:
      - _literal_18
      - artist_id
      target_id: 19
      target_name: null
    - !Single
      name:
      - album_title_count
      target_id: 38
      target_name: null
    - !Single
      name:
      - new_album_count
      target_id: 48
      target_name: null
    inputs:
    - id: 18
      name: _literal_18
      table:
      - default_db
      - _literal_18
- - 1:215-260
  - columns:
    - !Single
      name:
      - _literal_18
      - artist_id
      target_id: 51
      target_name: null
    - !Single
      name:
      - new_album_count
      target_id: 52
      target_name: null
    inputs:
    - id: 18
      name: _literal_18
      table:
      - default_db
      - _literal_18
- - 1:261-367
  - columns:
    - !Single
      name:
      - _literal_18
      - artist_id
      target_id: 51
      target_name: null
    - !Single
      name:
      - new_album_count
      target_id: 52
      target_name: null
    - !All
      input_id: 5
      except: []
    inputs:
    - id: 18
      name: _literal_18
      table:
      - default_db
      - _literal_18
    - id: 5
      name: _literal_5
      table:
      - default_db
      - _literal_5
nodes:
- id: 5
  kind: SString
  span: 1:278-330
  parent: 59
- id: 18
  kind: SString
  span: 1:0-46
  parent: 41
- id: 19
  kind: Ident
  span: 1:54-63
  ident: !Ident
  - this
  - _literal_18
  - artist_id
  targets:
  - 18
  parent: 20
- id: 20
  kind: Tuple
  span: 1:53-64
  children:
  - 19
  parent: 41
- id: 38
  kind: RqOperator
  span: 1:98-116
  alias: album_title_count
  targets:
  - 39
  parent: 40
- id: 39
  kind: Literal
- id: 40
  kind: Tuple
  span: 1:76-117
  children:
  - 38
  parent: 41
- id: 41
  kind: 'TransformCall: Aggregate'
  span: 1:66-117
  children:
  - 18
  - 40
  - 20
  parent: 47
- id: 44
  kind: Ident
  span: 1:125-139
  ident: !Ident
  - this
  - _literal_18
  - artist_id
  targets:
  - 19
  parent: 47
- id: 45
  kind: Ident
  span: 1:141-163
  ident: !Ident
  - this
  - album_title_count
  targets:
  - 38
  parent: 47
- id: 47
  kind: 'TransformCall: Sort'
  span: 1:119-164
  children:
  - 41
  - 44
  - 45
  parent: 50
- id: 48
  kind: Ident
  span: 1:191-213
  alias: new_album_count
  ident: !Ident
  - this
  - album_title_count
  targets:
  - 38
  parent: 49
- id: 49
  kind: Tuple
  span: 1:172-214
  children:
  - 48
  parent: 50
- id: 50
  kind: 'TransformCall: Derive'
  span: 1:165-214
  children:
  - 47
  - 49
  parent: 54
- id: 51
  kind: Ident
  span: 1:223-237
  ident: !Ident
  - this
  - _literal_18
  - artist_id
  targets:
  - 19
  parent: 53
- id: 52
  kind: Ident
  span: 1:239-259
  ident: !Ident
  - this
  - new_album_count
  targets:
  - 48
  parent: 53
- id: 53
  kind: Tuple
  span: 1:222-260
  children:
  - 51
  - 52
  parent: 54
- id: 54
  kind: 'TransformCall: Select'
  span: 1:215-260
  children:
  - 50
  - 53
  parent: 59
- id: 55
  kind: RqOperator
  span: 1:334-366
  targets:
  - 57
  - 58
  parent: 59
- id: 57
  kind: Ident
  span: 1:334-348
  ident: !Ident
  - this
  - _literal_18
  - artist_id
  targets:
  - 51
- id: 58
  kind: Ident
  span: 1:352-366
  ident: !Ident
  - that
  - _literal_5
  - artist_id
  targets:
  - 5
- id: 59
  kind: 'TransformCall: Join'
  span: 1:261-367
  children:
  - 54
  - 5
  - 55
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - SString:
            - !String SELECT album_id,title,artist_id FROM albums
            span: 1:0-46
          - FuncCall:
              name:
                Ident:
                - group
                span: 1:47-52
              args:
              - Tuple:
                - Ident:
                  - artist_id
                  span: 1:54-63
                span: 1:53-64
              - FuncCall:
                  name:
                    Ident:
                    - aggregate
                    span: 1:66-75
                  args:
                  - Tuple:
                    - FuncCall:
                        name:
                          Ident:
                          - count
                          span: 1:98-103
                        args:
                        - Ident:
                          - this
                          - title
                          span: 1:104-116
                      span: 1:98-116
                      alias: album_title_count
                    span: 1:76-117
                span: 1:66-117
            span: 1:47-118
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:119-123
              args:
              - Tuple:
                - Ident:
                  - this
                  - artist_id
                  span: 1:125-139
                - Ident:
                  - this
                  - album_title_count
                  span: 1:141-163
                span: 1:124-164
            span: 1:119-164
          - FuncCall:
              name:
                Ident:
                - derive
                span: 1:165-171
              args:
              - Tuple:
                - Ident:
                  - this
                  - album_title_count
                  span: 1:191-213
                  alias: new_album_count
                span: 1:172-214
            span: 1:165-214
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:215-221
              args:
              - Tuple:
                - Ident:
                  - this
                  - artist_id
                  span: 1:223-237
                - Ident:
                  - this
                  - new_album_count
                  span: 1:239-259
                span: 1:222-260
            span: 1:215-260
          - FuncCall:
              name:
                Ident:
                - join
                span: 1:261-265
              args:
              - SString:
                - !String SELECT artist_id,name as artist_name FROM artists
                span: 1:278-330
              - Binary:
                  left:
                    Ident:
                    - this
                    - artist_id
                    span: 1:334-348
                  op: Eq
                  right:
                    Ident:
                    - that
                    - artist_id
                    span: 1:352-366
                span: 1:334-366
              named_args:
                side:
                  Ident:
                  - left
                  span: 1:271-275
            span: 1:261-367
        span: 1:0-367
    span: 1:0-367
